# RcppParallel

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS  NEWS.md  README.md  RcppParallel.Rproj  TODO  _config.yml  _output.yaml  appveyor.yml  cleanup  cleanup.win  configure  configure.ac  configure.win  cran-comments.md  index.Rmd  index.html  navbar.htm  simd.Rmd  simd.html  styles.css  tbb.Rmd  tbb.Rproj  tbb.html
.github/workflows/: R-CMD-check.yaml
R/: RcppParallel-package.R  aaa.R  build.R  flags.R  fork.R  hooks.R  options.R  platform.R  plugin.R  skeleton.R  tbb-autodetected.R.in  tbb.R  utils.R  zzz.R
R/config/: configure.R
doc/: rtools_tbb_notes.md
examples/: boost-simd-abssum.cpp  boost-simd-accumulate.cpp  boost-simd-capabilities.cpp  boost-simd-dot.cpp  boost-simd-for-each.cpp  boost-simd-hello-world.cpp  boost-simd-map-reduce.cpp  boost-simd-transform.cpp  boost-simd-variance.cpp  rcpp-simd-transform.cpp  simd-operations.Rmd
gallery/: simd-variance.cpp  simd-vector-sum.cpp
includes/: before.html
inst/: .gitignore  NEWS
inst/examples/: parallel-distance-matrix.cpp  parallel-inner-product.cpp  parallel-matrix-transform.cpp  parallel-tbb.cpp  parallel-vector-sum.cpp  parallel_for.cpp  parallel_sum.cpp
inst/include/: .gitignore  RcppParallel.h  RcppParallelSIMD.h
man/: RcppParallel-package.Rd  RcppParallel.package.skeleton.Rd  RcppParallelFlags.Rd  RcppParallelLibs.Rd  flags.Rd  isForkedChild.Rd  isProcessForkedChild.Rd  setThreadOptions.Rd  tbb-package.Rd  tbbLibPath.Rd  tbbLibraryPath.Rd
packrat/: packrat.opts
patch/: nt2-container.patch  nt2-gampdf.patch  nt2-topology.patch
patches/: mingw_cpuid.diff  windows_arm64.diff
revdep/: README.md  checks.rds  data.sqlite  problems.md  timing.md
src/: .gitignore  Makevars  Makevars.in  Makevars.win  init.c  init.cpp  install.libs.R  install.libs.R.in  options.cpp  tbb.cpp  tbbinit.cpp
tests/: doRUnit.R  testthat.R
tools/: config.R  tbb-patch.R  tbb-update.R
vignettes/: simd-operations.Rmd
(+4343 files in other folders)
